# arib-recorder

./: .gitignore  docker-compose.yml
recorder/: .dockerignore  Cargo.toml  Dockerfile  build.rs
recorder/proto/: page.proto
recorder/rec-ui/: vite.config.mts
recorder/src/: context.rs  db_utils.rs  main.rs  mirakurun_client.rs  sched_trigger.rs
recorder/src/api/: mod.rs
recorder/src/epg_syncer/: event_relay.rs  events_stream.rs  mod.rs  periodic_tasks.rs
recorder/src/recording_planner/: mod.rs
recorder/src/recording_pool/: mod.rs  pool.rs  recording_task.rs
recorder/src/recording_pool/recording_task/: eit_parser.rs  eit_subprocess.rs  io_object.rs  io_object_lite.rs  states.rs
recorder/src/recording_pool/recording_task/eit_parser/: tsduck.rs
