[package]
name = "arib-recorder"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
once_cell = "1.16"
#keyring = "1.2.0"
structopt = "0.3.26"

log = "~0.4.0"
env_logger = "~0.9.0"

mirakurun_client = "3.9.0-rc.2.1"
meilisearch-sdk = "0.20.1"

axum = "^0.5"
chrono = { version = "^0.4", features = ["clock"], default-features = false }

futures-util = { version = "^0.3", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal"], default-features = false }
tokio-stream = { version = "~0.1", features = ["io-util"], default-features = false }
tokio-util = { version = "~0.7", features = ["io"], default-features = false }
pin-project-lite = "0.2.9"

machine = "0.3.0"
ulid = { version = "^1.0", features = ["serde"] }

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"


[profile.release]
lto = true