[package]
name = "arib-recorder"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
once_cell = "1.16"
structopt = "0.3.26"

log = "~0.4.0"
env_logger = "~0.10"

mirakurun_client = "3.9.0-rc.2"
meilisearch-sdk = "0.22.0"

#notify-rust = "4.5.10"

tonic = "0.8"
tonic-web = "0.5.0"
prost = "0.11"
prost-types = "0.11"

futures-util = { version = "^0.3", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal"], default-features = false }
tokio-process-stream = "0.3.0"
tokio-stream = { version = "~0.1", features = ["io-util"], default-features = false }
tokio-util = { version = "~0.7", features = ["io"], default-features = false }
lockfree = "0.5.1"
pin-project-lite = "0.2.9"

machine = "0.3.0"
chrono = { version = "^0.4", features = ["clock"], default-features = false }
ulid = { version = "^1.0", features = ["serde"] }

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[build-dependencies]
tonic-build = "0.8"

[profile.release]
lto = true